--- a/botconfig.json
+++ b/botconfig.json
@@ -1,5 +1,5 @@
 {
-    "token": "Njk3MzI2NjQwNDQ2ODMyNjcx.Xo2Glg.Y_nCxDcWPZzyJ8PrfPnQZ2oqcTI",
+    "token": "your-secret-key",
     "prefix": "!",
     "red": "#b70000",
     "orange": "#ff6a00",
